# phenocv

./: ..gitignore.un~  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
configs/mmdet/_base_/: custom_runtime.py
configs/mmdet/_base_/datasets/: panicle_detection.py  panicle_detection_yolo.py
configs/mmdet/panicle/: cascade-rcnn_convnext-t-p4-w7_fpn_2x_panicle-full.py  dino-5scale_swim-l_8xb2-2x_panicle-full.py  faster-rcnn_r101_fpn_2x_panicle-full.py  faster-rcnn_r50-scratch_fpn_fn-all_6x_panicle-full.py  faster-rcnn_r50_fpn_2x_panicle-full.py
configs/yolo/: panicle-full.yaml  panicle.yaml  panicle_drone.yaml  stubble.yaml  stubble_h20.yaml  tillering.yaml
label_anything/sam/: _wsgi.py  filter_poly.py  mmdetection.py
label_anything/sam/1702039869/: event.json
label_anything/sam/1702039870/: event.json
label_anything/sam/1702106102/: event.json
label_anything/sam/models/mobile_sam/: __init__.py  automatic_mask_generator.py  build_sam.py  predictor.py
label_anything/sam/models/mobile_sam/modeling/: __init__.py  image_encoder.py  mask_decoder.py  prompt_encoder.py  sam.py  tiny_vit_sam.py  transformer.py
label_anything/sam/models/mobile_sam/utils/: amg.py  onnx.py  transforms.py
label_anything/tools/: convert_to_ls_format.py  convert_to_rle_mask_coco.py
phenocv/: __init__.py  postprocess.py  preprocess.py  registry.py  traits.py  utils.py  version.py
phenocv/analysis/: __init__.py  traits.py  utils.py
phenocv/configs/: sahi_panicle_headingdate.cfg  sahi_panicle_num.cfg  test.cfg  uav_panicle.cfg
phenocv/configs/mmdet/_base_/: custom_runtime.py
phenocv/configs/mmdet/_base_/models/: cascade-rcnn_r50_fpn.py
phenocv/configs/mmdet/_base_/schedules/: schedule_100e_onecycle.py  schedule_1x.py  schedule_20e.py  schedule_2x.py  schedule_3x.py
phenocv/configs/mmdet/panicle/: cascade-rcnn_convnext-t-p4-w7_fpn_2x_panicle-full.py  cascade-rcnn_r101_fpn_2x_panicle-full.py  cascade-rcnn_r50_fpn_2x_panicle-full.py  dino-4scale_r50_8xb2-2x_panicle-full.py  faster-rcnn_convnext-t-p4-w7_fpn_3x_ms_panicle-full.py  faster-rcnn_r50-scratch_fpn_fn-all_6x_panicle-full.py  faster-rcnn_r50_fpn_2x_panicle-full.py
phenocv/configs/yolo/: panicle.yaml  panicle_gantry.yaml  stubble.yaml  stubble_h20.yaml  tillering.yaml
phenocv/convert/: __init__.py  base.py  coco2ls.py  yolo2coco.py
phenocv/infer/: __init__.py  base_yolo.py  utils.py  yolo.py
phenocv/postprocess/: __init__.py
phenocv/predict/: __init__.py  base_yolo.py  utils.py  yolo.py
phenocv/preprocess/: __init__.py  extractor.py  utils.py
phenocv/process/: __init__.py  base.py  extractor.py  formatter.py  postprocessor.py  preprocess.py  utils.py
tutorial/: getting_start.ipynb
weights/: .gitattributes  uav_panicle_yolov5m6u.pt
